tests/baselines/reference/exportAssignmentWithDeclareModifier.errors.txt
exportAssignmentWithDeclareModifier.ts(2,1): error TS1120: An export assignment cannot have modifiers.


==== exportAssignmentWithDeclareModifier.ts (1 errors) ====
    var x;
    declare export = x;
    ~~~~~~~
!!! error TS1120: An export assignment cannot have modifiers.